test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/label_static_var_same_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  int
  identifier(x)
  =
  const int(5)
  ;
  goto
  identifier(x)
  ;
  identifier(x)
  =
  const int(0)
  ;
  identifier(x)
  :
  return
  identifier(x)
  ;
  }
