test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/missing_type_specifier.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  static
  identifier(var)
  =
  const int(0)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(var)
  ;
  }
